--- a/Client/Shared/LoginDisplay.razor
+++ b/Client/Shared/LoginDisplay.razor
@@ -12,6 +12,7 @@
     </Authorized>
     <NotAuthorized>
         <a href="authentication/login">Log in</a>
+        <a href="/homePage">home Page</a>
         
     </NotAuthorized>
 </AuthorizeView>
