--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/homePage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> home page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
