--- a/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
+++ b/Server/Areas/Identity/Pages/Shared/_LoginPartial.cshtml
@@ -31,5 +31,8 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="@returnUrl">Login</a>
     </li>
+        <li class="nav-item">
+            <a href="/homePage">home page</a>
+        </li>
 }
 </ul>
