--- a/Client/Components/EditCategoryComponent.razor
+++ b/Client/Components/EditCategoryComponent.razor
@@ -6,6 +6,7 @@
 <h3>עריכת קטגוריה</h3>
 <input type="text" @bind="categoryToEdit.categroyTitle"/>
 <button>הוספת אייקון</button>
+<span>@categoryToEdit.icon</span>
 <div>
     <label for="categoryColors">צבע</label>
     <span>@categoryToEdit.color</span>
@@ -51,6 +52,15 @@
     [Parameter]
     public CategoryToShow categoryToEdit { get; set; }
 
+    [Parameter]
+    public string icon { get; set; }
+
+    [Parameter]
+    public string categoryColor { get; set; }
+
+    [Parameter]
+    public EventCallback<bool> isEditCategoryOverlayOpen { get; set; }
+
     public CategoryToEdit editedCategory = new CategoryToEdit();
 
     public async Task saveUpdatedCat()
@@ -67,6 +77,7 @@
             categoryToEdit.categroyTitle = updatedCategory.categroyTitle;
             categoryToEdit.icon = updatedCategory.icon;
             categoryToEdit.color = updatedCategory.color;
+            isEditCategoryOverlayOpen.InvokeAsync(false);
 
             //need to refresh the home page
 
