--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -11,7 +11,7 @@
 
 @if (openOverlay)
 {
-    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" refreshBudget="refreshPage"></AddTransactionComponent>
+    <AddTransactionComponent subCategoryTitle="@subCategoryTitle" subCategoryIDTOGet="@subCategoryIDToGet" isTransactionOverlayOpen="@openAddTransOverlay" userID="@userID" refreshBudget="refreshPage" gapsToUpdateBudgets="gapsToUpdateTheBudget"></AddTransactionComponent>
 }
 
 @code {
@@ -36,6 +36,10 @@
     public EventCallback refreshPage { get; set; }
 
     [Parameter]
+
+    public EventCallback<List<OverDraftBudgetToEdit>> subCatTakenBudget { get; set; }
+
+    [Parameter]
     public double budget { get; set; }
 
     public bool openOverlay = false;
@@ -43,6 +47,12 @@
     public void openAddTransOverlay()
     {
         openOverlay = !openOverlay;
+    }
+
+    public void gapsToUpdateTheBudget(List<OverDraftBudgetToEdit> gaps)
+    {
+        subCatTakenBudget.InvokeAsync(gaps);
+        //budget = gaps[1].monthlyPlannedBudget;
     }
 
 }
